# rust_basic

./: .gitignore  Cargo.toml
.github/workflows/: quickstart.yml
cf_preparator/: Cargo.toml
cf_preparator/src/: main.rs
codeforces/: Cargo.toml
codeforces/src/: main.rs
qr_trav/: Cargo.toml  Dockerfile  docker-compose.yaml
qr_trav/src/: main.rs
simple/: Cargo.toml
simple/src/: main.rs
src/: main.rs
