[package]
name = "qr_trav"
version = "0.1.0"
authors = ["Aleksei Piskunov <piskunov.alesha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.118"
qrcode-generator = "4.0.4"
uuid = { version = "0.8.1", features = ["v4"] }
base64 = "0.13.0"
rand = "0.8.0"
mobc = { version = "0.6.1", features = ["async-std"] }
redis = { version = "0.18.0", features = ["async-std-comp"] }
async-trait = "0.1.42"
regex = "1.4.2"
serde_json = "1.0.60"
